Ajustes na home page

--- a/css/style.css
+++ b/css/style.css
@@ -331,7 +331,7 @@ select:focus {
 .overlay-style-one{
     
     position: absolute;
-    background: rgba(228, 110, 74, 0.9);
+    background: rgba(44, 156, 50, 0.8);
     height: 100%;
     left: 0;
     top: 0;
@@ -516,7 +516,7 @@ select:focus {
     padding: 11px 0;
 }
 .header-area .header-right .contact-info li .icon-holder span:before {
-    color: #e46e48;
+    color: #2c9c32;
     font-size: 30px;
     line-height: 30px;
 }
