ajustes about page and index

--- a/css/style.css
+++ b/css/style.css
@@ -2203,7 +2203,7 @@ select:focus {
     padding: 30px;
 }
 .our-history-mission-area .text span{
-    color: #E46E48;
+    color: #2c9c32;
     font-size: 17px;
     font-weight: 700;
 }
